2009-05-16  Brad Lucier  <lucier@math.purdue.edu>

PR middle-end/39301
	* hwint.h: Add macro HOST_WIDEST_INT_PRINT.
	* bitmap.c (bitmap_descriptor): Make fields HOST_WIDEST_INT.
	(output_info): Make field HOST_WIDEST_INT.
	(print_statistics): Use HOST_WIDEST_INT_PRINT.
	(dump_bitmat_statistics): Same.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147624 138bc75d-0d04-0410-961f-82ee72b054a4